--- a/Axmed_Cigaal.mw
+++ b/Axmed_Cigaal.mw
@@ -5,7 +5,7 @@ Ahmed wuxuu ka mid ahaa Fanaaniintii la wareegi jirtay Riwaayadaha gobolada Soom
 
 == Heading text ==
  AHMED NAAJI, SAALAX QAASIN SALAAD DERBI AHMED NAAJI AHMED SHARIIF (XAGA DUMARKA ) MAANDEEQ, BAXSAN. MAGOOL, GUUDO CARWO, GALAAAYR, SAHRA AHMED, ok hada ahmed wuxuu ahaa nin Fanaaniintaa ku han wayn siduu ku gaadhey aan xoogaa markale taariikhdiisi dib u milicsano. Ahmed oo walaalkii soo koriyey oo soo barbaarshay oo aah nin abwaan ah baa usameeyey heesa badan kooda waxaan la oran jiray C/QAADIR CALI CIGAAL oo ahaa abwaan kii ugu horeeyey ee hees u sameeya ahmed ahaan.hadaanu eegno heesaha uu C/QADIR CALI CIGAAL sameeyey waxaa ka mid ahaa NAYRUUSHKU WAA CIID Riwaayadii la oran jiray JACAYL BOG UMA BAAHNA hadaba Ahmed gabdhihii Riwayadaha la dhigi jiray kuwee buu ugu jeclaa? dadku waxay yiraahdaan Ahmed wuxuu ugu jeclaa KHADRA DAAHIR IYO SAYNAB CIGE lakiin ahmed wuxuu yiri gabdhahaan la dhigi jiray Riwaayadaha waxay ahaayeen gabdho aan la arag lana maqal mid mid laga doortana malahayan kuli waan wada jeclaaa mar wax laga waydiiyey, isga oo intaa raaciyey in fanaandii ugu layaabka badneyd dhinaca jazz-ka oo dadkoo dhan cajab galisey in ay aheyd  xiligaas fanaanada caanka ah ee Maryan Mursal 
-Ahmed maxaa iska bedelay Fankii? Mar la weydiiyey su'aashaas wuxuu yidhi "markii qurbaha la soogalay wuxuu fanku wuxuu ku xidhnaan jirey dadka somaliyeed hadaynoqoto mid jacayl ah iyo mid kale oo ah figradba markaa fankii kama danbayn Soomaaliya burburkeedii wuxuu yiri qurbaha markaanu nimid sidaanu uga fekeri jiray fanka uguma fekero oo intaa waanu ordaynaa lakiin soomaalia markaanu joognay waxanu ahayn dad u meel go'ay in ay dadka maaweeliyaan waxaamu xooga saarnay maaweelada dadka".Ahmed Cali Cigaal wuxu hada joogaa wadan ka Maraykanka gaar ahaan Gobolka Tanasii Magaalada Naashviil.Wuuxuna weli ka dhigaa Riwaayadaha wadanka maraykanka iyo yurub meelo ka mid ah, wuunaa yiri "illhay isagaa caadilee dhulkeenii ha ugu soo hoorsho nabad sida roobka ayaan ku leeyahay daka soomaliyeed ee akhrisanaya qoralkan".
+Ahmed maxaa iska bedelay Fankii? Mar la weydiiyey su'aashaas wuxuu yidhi "markii qurbaha la soogalay wuxuu fanku wuxuu ku xidhnaan jirey dadka somaliyeed hadaynoqoto mid jacayl ah iyo mid kale oo ah figradba markaa fankii kama danbayn Soomaaliya burburkeedii wuxuu yiri qurbaha markaanu nimid sidaanu uga fekeri jiray fanka uguma fekero oo intaa waanu ordaynaa lakiin soomaalia markaanu joognay waxanu ahayn dad u meel go'ay in ay dadka maaweeliyaan waxaamu xooga saarnay maaweelada dadka".Ahmed Cali Cigaal wuxu hada joogaa wadan ka Maraykanka gaar ahaan Gobolka Tanasii Magaalada Naashviil.Wuuxuna weli ka dhigaa Riwaayadaha wadanka maraykanka iyo yurub meelo ka mid ah, wuunaa yiri "illhay isagaa caadilee dhulkeenii ha ugu soo hoorsho nabad sida roobka ayaan ku leeyahay daka soomaliyeed ee akhrisanaya qoralkan".waxaan codsanaynaa inaan maqalno heesaha uu la qaado faadumo maandeeq oo dhan sida gursamo alahayow iyo kuwii ku jiray riwaayadii aabaheey ka samraye adiga oo dhan.heestahii ku jray jacayl boob uma baahna sida nayruus uu la qaaday khadra daahir iyo heesaha cigaal goonida u qaado waxuuna cigaal ninka ugu badan oo la heesay hablaha waaberi oo dhan. thanks.
 
 == Halka aad ka dhageesan kartid heesahiisa ==
 * [http://maalmo.com/hees/artist/a/ahmed-ali-egal Heesaha ahmed cali cigaal Maalmo ]
