waxaa ka saaray sawir anshax xumo ah. waana saxay

--- a/Xiniinyo.mw
+++ b/Xiniinyo.mw
@@ -1,5 +1,14 @@
-[[File:Low hanging testicles.jpg|thumb|Xiniinyo oo hoos u laalaadeen waqtiga kulaylka]]
+'''Xiniinyo''' wa qeyb ka mid ah xubinta taranka raga, waa meesha soo saarta shahwada.
 
-'''Xiniinyaha''' (ingiriis testicles) wa qeyb laga helo jirka raga iyo xoolaha labood ah. Xiniinyaha [[biniaadan]] indhaha mala gu arki karo - sababta ah wexey gudaha ku jiraan [[maqaar]] oo boorso yar uu eg. Ujeedada xiniinyaha waxa weyaan iney [[manida]] sameeyaan.
 
-[[Category:Saxaax]]
+
+
+
+
+
+
+
+
+
+{{gumud}}
+[[Category:jirka]]
