--- a/Qabiil.mw
+++ b/Qabiil.mw
@@ -3,6 +3,8 @@
 
 '''Qabiil''', '''Qolo''' ([[ingiriis]]: tribe; [[carabi]]: قبيلة) sidoo kale loo yaqaano beel waa guuto [[dad]] ah oo ay ka dhexeyso dan guud, heyb, magac, dhiig, isir iyo farac raac. Meelaha qaar ereyga "Qabiil" waxaa lagu micneeyaa in uu ka turjumaayo dad wadaaga dan guud, meel wada degan ama fikir iyo siyaasad ka mideeysan. Wadanka [[Soomaaliya]] qabiilku micne gaar ah ayuu ku leeyahay. Dadka Soomaalidu waxay u isticmaalaan qabiilka inay isku aqoonsadaan oo heyb iyo isir ahaan isku ogaadaan. In kastoo micnayaal iyo ujeedooyin badan loo isticmaalo qabiilka; tan la isku waafaqsan yahay waa in qabiilku yahay "dad isku isir ah oo wadaaga magac, deegaan, gobol iyo heyb u gaar ah".
 
+Qabiilada Soomaaliyeed naaneys way yeeli karaan. Tusaale ahaan, naaneyska [[reer darawiish]] waa Dhulbahante.
+
 {{Gumud}}
 [[Category:Soomaaliya]]
 [[Category:Dadka Soomaalida]]
