*Empty MediaWiki Message*

--- a/Mandiraja,_Banjarnegara.mw
+++ b/Mandiraja,_Banjarnegara.mw
@@ -13,7 +13,15 @@
 |population_as_of=2019
 |website=https://mandiraja.banjarnegarakab.go.id
 }}
-Mandiraja waa magaalada [[Jawa tengah,]], ee jasiradda Jawa, [[Indunisiya]]. Magaaladu waxay lee dahay dhul ah 52,61 km waxyna lee da hay 65.515 qof deggan 2019.<ref>[https://banjarnegarakab.go.id Situs Resmi Kabupaten Banjarnegara] banjarnegarakab.go.id Di akses tanggal 20 August 2020.</ref>
+'''Mandiraja''' waa waa degmo ku taal [[Banjarnegara Regency]] , [[Bartamaha Java]] , [[Indonesia]]. Degmadu waxay lee dahay dhul ah 52,61 km² waxaana degen 63,779 oo qof tirakoobkii dadweynaha Indonesia sanadkii 2010.<ref> [https://www.bps.go.id/ Badan Pusat Statistik (BPS) Resmi Republik Indonesia] www.bps.go.id .accessed date 21 March 2020.</ref>
 
 ==Tixraacyada==
 {{reflist}}
+
+
+
+
+
+
+
+[[category:Degmooyinka Bartamaha Java]] [[Category:indonesia]]
