*Empty MediaWiki Message*

--- a/Mandiraja,_Banjarnegara.mw
+++ b/Mandiraja,_Banjarnegara.mw
@@ -13,7 +13,7 @@
 |population_as_of=2019
 |website=https://mandiraja.banjarnegarakab.go.id
 }}
-'''Mandiraja''' waa waa degmo ku taal [[Banjarnegara Regency]] , [[Bartamaha Java]] , [[Indonesia]]. Degmadu waxay lee dahay dhul ah 52,61 km² waxaana degen 63,779 oo qof tirakoobkii dadweynaha Indonesia sanadkii 2010.<ref> [https://www.bps.go.id/ Badan Pusat Statistik (BPS) Resmi Republik Indonesia] www.bps.go.id .accessed date 21 March 2020.</ref>
+'''Mandiraja''' waa degmo ku taal [[Banjarnegara Regency]] , [[Bartamaha Java]] , [[Indonesia]]. Degmadu waxay lee dahay dhul ah 52,61 km² waxaana degen 63,779 oo qof tirakoobkii dadweynaha Indonesia sanadkii 2010.<ref> [https://www.bps.go.id/ Badan Pusat Statistik (BPS) Resmi Republik Indonesia] www.bps.go.id .accessed date 21 March 2020.</ref>
 
 ==Tixraacyada==
 {{reflist}}
