--- a/Saraar.mw
+++ b/Saraar.mw
@@ -72,10 +72,9 @@ Saraar waa degmo ee u dhexeysa Togdheer iyo gobolka [[Cayn]].
 ==Caasimada==
 Degmada '''Caynabo''' ayaa ah magalada caasimada u ah Gobolka saraar waana magalada ugu weyn, gobolka waxa ku yala   Banka saraar oo aad u Qurux badan xilliga roobka iyo barwaaqada. Waa mid weyn dherer iyo Ballac intu legyahay  waa kii Faysal Cumar Mushteeg lahaa. " '''Tan iyo xalay waan soo soconnee, Saraari ma jidkii Siraad baa".''' Waxa loogu wanqalay Gobolka Saraar oo ay Caasimad u tahay Degmada Caynaba. 
 
-==Qabiil==
-Waxaa Saraar ku nool habarjeclo dhinaca galbeedka iyo bartamaha; Saraar dhinaca bariga waxaa ku nool [[reer darawiish]]. Beelaha [[reer darawiish]] ee ku dhaqan Saraar waxay ku nool yihiin Guumays iyo tuulooyinka hareeraha Samala. Jilibada [[reer darawiish]] ku dhaqan Saraar oo ugu tiro badan waa Jaamac Siyaad.
+==Qabiil=
 
-Laamaha HJ ee Saraar ku dhaqan waxaa ka mid ah [[Reeryoonis]]; [[cali barre]]; [[reeriidle]]; [[cumarjibriil]]; [[Solomadow]]; [[Sacad yoonis]]
+Laamaha HJ ee Saraar ku dhaqan waxaa ka mid ah [[Reeryoonis]]; [[cali barre]]; [[reeriidle]]; [[cumarjibriil]]; [[Solomadow]]; [[HY sacad yoonis]]
 
 ==Tirada==
 Dadka ku nool waxa lagu qiyaasaa Gobolka Saraar ku dhawaad Boqol Kun. 50.000 waxa doorashada inay codeeyaan iska diiwaangaliyey 31-kun oo cod bixiye.wana gobolki ugu codka badna marka laga yimado 6da gobol ee waweyn. Waa gobol xoolo dhaqato, Beeralay, iyo Ganacsato.
