--- a/Caynaba.mw
+++ b/Caynaba.mw
@@ -67,7 +67,7 @@ waana magaalo qadiimi ah waxa kuyaal ceelka caynaba oo Somaliland oo dhan
 ka caana waa gobol shidaal leh iyo macdan]]
 
 ==Qabiilka degan==
-'''Caynaba''' waa magaalo qadiim ah waxaana degga Beesha [[Habarjeclo]]. Sida [[Cali barre] [[cumar jibriil]] iyo [[solomadow]]
+'''Caynaba''' waa magaalo qadiim ah waxaana degga Beesha [[Habarjeclo]]. Sida reer yoonis [[Cali barre] [[cumar jibriil]] iyo [[solomadow]]
 
 ==Taariikhdi hore caynaba==
 Waa mid kamida magaalooyinka ugu da wayn somaliland  oo aad u caan ah waxa ay ku taalaa meel istaraji ah oo waxa mara laamiga dheer ee isku xidha dalkii somalia la isku odhan jiray. Tirada dadka degan imika waxa lagu qiyaasaa ilaa 100.0000 kun oo qof.
