Buula Xaaji Cawramale

--- a/Buula_xaaji.mw
+++ b/Buula_xaaji.mw
@@ -18,7 +18,8 @@ Degmadan [[Buula xaaji]] waxa haatan gacanta ku haya [[Urur]]<nowiki/>ka Islaami
 
 
 '''Beesha deegaanka'''
-----Degmada Buula Xaaji waxa ku dhaqan beesha  [[Cawramale]] oo ka mid ah beelwaynta Warsaneli waxayna deegaan ku yihiin badanaa gobolada koonfurta soomaaliya, gaar ahaan gobolada [[Jubbada Hoose]], [[Jubbada Dhexe]], [[Baay]], [[Bakool]],  [[Shabeellaha Dhexe]] , [[Shabeellaha Hoose]] , [[Hiiraan]] [[Sanaag]] iyo [[Banaadir]]...
+----Degmada Buula Xaaji waxa ku dhaqan beesha  [[Cawramale]] oo ka mid ah beelwaynta [[Warsangali]] waxayna deegaan ku yihiin badanaa gobolada koonfurta soomaaliya, gaar ahaan gobolada [[Jubbada Hoose]], [[Jubbada Dhexe]], [[Baay]], [[Bakool]],  [[Shabeellaha Dhexe]] , [[Shabeellaha Hoose]] , [[Hiiraan]] [[Sanaag]] iyo [[Banaadir]]...
+
 [[Category:Magaalooyinka Gobolka Jubbada Hoose]]
 [[Category:Harti]]
 [[Category:Daarood]]
