منطقة  بكول صومال

--- a/Category:Degmooyinka_Gobolka_Bakool.mw
+++ b/Category:Degmooyinka_Gobolka_Bakool.mw
@@ -1,2 +1,8 @@
-[[Category:Degmooyinka Soomaaliya|Bakool]]
-[[Category:Bakool]]
+منطقة بكول صومال تقع في جنوب الصومال 
+محافظات بكول صوماليا ستة محافظات
+١. حدر عاصمة بكول 
+٢. واجد 
+٣. بورطحنلي 
+٤. ربطور 
+٥. البردى
+٦. تيقلو
