*Empty MediaWiki Message*

--- a/Galmudug.mw
+++ b/Galmudug.mw
@@ -3,19 +3,19 @@
 {{Macluumaad maamulada Soomaaliya
 |Name = Dowlad goboleedka Galmudug
 |AlternateName = ولاية جلمدج الصومال
-|FullName = Galmudug State of Somalia
+|FullName = Galmudug Government
 |EntityAdjective = Baarlamaan
-|Official Logo = Galmudug State of Somalia Coat of Galmudug State of Somalia Coat of Arms.png
+|Official Logo = Galmudug Government of Somalia Coat of Galmudug State of Somalia Coat of Arms.png
 |Flag = Flag of Galmudug.svg
 |CoatOfArms =
 |Map = Regioni federali Somali.png
 |OfficialLang = Soomaali <small>(''Xoogaa Carabi ah'')</small>
-|Demonym = Dawlad goboleedka Galmudug<br/>Maamul goboleedka Soomaaliyeed ee Galmudug<br/><small>(Galmudug)</small>
+|Demonym = Dowladda Galmudug<br/><br/><small>(Galmudug)</small>
 |Capital = [[Dhuusamareeb]]
 |LargestCity = [[dhuusamareeb]]
-|LegislativeType = G Baarlamaanka
+|LegislativeType = The capital of the Adado State Parliament
 |Speaker =Maxamuud Nuur Gacal 
-|PresidentType = Madaxweyne State
+|PresidentType = Madaxweyne Government
 |President = [[Ahmed Abdi Kariye]]
 |Vice President = Cali Daahir Ciid
 |Vice PresidentParty = 
