*Empty MediaWiki Message*

--- a/Galmudug.mw
+++ b/Galmudug.mw
@@ -49,12 +49,12 @@
 Waardiyaha galmudug ee la yidhaahdo ''ciidanka daraawiishta Galmudug'', waxaa loogu magac daray qaranka [[Dhulbahante]] uu [[Sayyidka]] hogaaminayay oo caasimada ahayd [[Taleex]] waqtiga gumeysiga.
 
 
-==Dawlad==
+==Dawladda==
 Xarunta baarlamaanka galmudug waa cadaado.
 
 Waxaa Galmudug xilka madaxweyne haatan kursiga ku fadhiya Madaxweyne [[Ahmed Abdi Kariye]].
 
-Dowlad goboleedka Galmudug waxay ka kooban tahay laba gobol oo kala ah [[Galgaduud]] iyo [[Mudug]], waana halka magaca Galmudug ka yimid ah isku darka labada magac ee labada gobol. Galmudug waxay caan ku tahay kheyrad badan sida caano iyo hilib.
+Dowladda Galmudug waxay ka kooban tahay laba gobol oo kala ah [[Galgaduud]] iyo [[Mudug]], waana halka magaca Galmudug ka yimid ah isku darka labada magac ee labada gobol. Galmudug waxay caan ku tahay kheyrad badan sida caano iyo hilib.
 
 =Taariikh=
 Waxaa dowlad goboleedka Galmudug la aas aasay 14ka bishii Agoosto sanadkii 2006. [[Mohamed Warsame Ali]] 'Kiimiko' ayaa xilka madaxweynaha maamulka cusub markaasi loo doortay, iyadoo markaasi magaalada [[Galkayo]] ay noqotay caasimadda maamulka.<ref name="Sgenlps">{{cite news|title=Somalia: Galmudug Elects New Leader, Pledges Security|url=http://allafrica.com/stories/201208030100.html|accessdate=18 April 2013|newspaper=SMN|date=2 August 2012}}</ref>
