--- a/Galmudug.mw
+++ b/Galmudug.mw
@@ -1,18 +1,18 @@
 {{Coord|5|30|07|N|46|22|46|E|source:kolossus-jawiki|display=title}}
 {{Hubin}}
 {{Macluumaad maamulada Soomaaliya
-|Name = Dowlad goboleedka Galmudug
+|Name = Dowladda Galmudug
 |AlternateName = ولاية جلمدج الصومال
 |FullName = Galmudug Government
 |EntityAdjective = Baarlamaan
-|Official Logo = Galmudug Government of Somalia Coat of Galmudug State of Somalia Coat of Arms.png
+|Official Logo = Galmudug Government of Somalia Coat of Galmudug  Government of Somalia Coat of Arms.png
 |Flag = Flag of Galmudug.svg
 |CoatOfArms =
 |Map = Regioni federali Somali.png
 |OfficialLang = Soomaali <small>(''Xoogaa Carabi ah'')</small>
 |Demonym = Dowladda Galmudug<br/><br/><small>(Galmudug)</small>
 |Capital = [[Dhuusamareeb]]
-|LargestCity = [[dhuusamareeb]]
+|LargestCity = Cadaado
 |LegislativeType = The capital of the Adado State Parliament
 |Speaker =Maxamuud Nuur Gacal 
 |PresidentType = Madaxweyne Government
@@ -21,6 +21,7 @@
 |Vice PresidentParty = 
 |Legislature = Baarlamaanka Federaalka Soomaaliya
 |Gudoomiyaha dhalinyarada Caruuse Macali Maxamed
+
 |PostalAbbreviation = (gaarka GM)|PostalCodePrefix = [[Furaha Posto ee Soomaaliya|GM]]
 |AreaRank = 7aad
 |TotalArea_km2 = 146000
