*Empty MediaWiki Message*

--- a/Galmudug.mw
+++ b/Galmudug.mw
@@ -2,7 +2,7 @@
 {{Hubin}}
 {{Macluumaad maamulada Soomaaliya
 |Name = Dowladda Galmudug
-|AlternateName = ولاية جلمدج الصومال
+|AlternateName = حكومة غالمودوغ
 |FullName = Galmudug Government
 |EntityAdjective = Baarlamaan
 |Official Logo = Galmudug Government of Somalia Coat of Galmudug  Government of Somalia Coat of Arms.png
