--- a/Somaliaaaa.mw
+++ b/Somaliaaaa.mw
@@ -95,7 +95,7 @@
 | cctld                = [[.so]]
 | today                = 
 }}
-'''Soomaaliya''' ({{lang-en|Somalia}}, [[Carabi|Af Carabi]]: الصومال), sida dowliga ah loo yaqaano '''Jamhuuriyadda Federaalka Soomaaliya''' ({{lang-en|Federal Republic of Somalia}}) (waxaa hore loo oran jirey [[Jamhuuriyadda Dimuqraadiga Soomaaliya]] xiligii Hantiwadaag hore), waa [[Dowlad]] iyo wadan dhacda [[Faanka Afrika]] ama [[Foolalka Afrika]] ee kasii socda [[Marinka Gardafuul]]. Wuxuu ka kooban yahay maamulgoboleedyo sidha [[Puntland]], [[Somaliland]] [[Jubaland]], [[Galmudug]] [[Hirshabeelle]]  [[Koonfur Galbeed]] iwm. Waxaa ka xiga bariga [[marinka Gardafuul]] iyo [[Seyshelles]], iyo [[Soqotra]] iyo [[badda Soomaal]], koofuur na [[Kenya]]. Waxaa ku nool dad [[Faanyahan]] ah, iyo dadka [[Dhul-hoos Bari Kushiitik]] ah.
+'''Soomaaliya''' ({{lang-en|Somalia}}, [[Carabi|Af Carabi]]: الصومال), sida rasmiga ah loo yaqaano '''Jamhuuriyadda Federaalka Soomaaliya''' ({{lang-en|Federal Republic of Somalia}}) (waxaa hore loo oran jirey [[Jamhuuriyadda Dimuqraadiga Soomaaliya]] xiligii Hantiwadaag hore), oo sii dhaxal ahaan loo yaqaano '''Soomaal''' waa [[Dowlad]] iyo wadan dhacda [[Faanka Afrika]] ama [[Foolalka Afrika]] ee kasii socda [[Marinka Gardafuul]]. Wuxuu ka kooban yahay maamulgoboleedyo sidha [[Puntland]], [[Somaliland]] [[Jubaland]], [[Galmudug]] [[Hirshabeelle]]  [[Koonfur Galbeed]] iwm. Waxaa ka xiga bariga [[marinka Gardafuul]] iyo [[Seyshelles]], iyo [[Soqotra]] iyo [[badda Soomaal]], koofuur na [[Kenya]]. Waxaa ku nool dad [[Faanyahan]] ah, iyo dadka [[Dhul-hoos Bari Kushiitik]] ah.
 
 Waxaa dawlada Soomaaliya ka horeeyay dawladda Darwiish oo ciidanka oo hoogaamin jiray iyo waliba abaanduul guud ka ahaa [[Ismaaciil Mire]]. Juquraafi ahaan woqooyi galbeed waxaa ka xiga [[Jabuuti]], iyo [[Kiinya]] Koofur galbeed, iyo [[Gacanka Cadmeed]] woqooyiga iyo [[Marinka Gardafuul]] bariga iyo [[Itoobiya]] galbeedka. Waxay leedahay xad badeedka ugu dheer qaaradda Afrika. Waxaa kala duwan qaabka dhulka kuwaas oo kala ah [[Buur|Buuro]], [[Dul]] iyo [[Bannaan]]. Cimiladeeda oo ah lama degaan kulul dhamaan sanadka iyada oo ay jiraan xoogaa dabaylo xilliyeed iyo roobab aan joogto ahayn.
 
