*Empty MediaWiki Message*

--- a/Barkhad_Saalax.mw
+++ b/Barkhad_Saalax.mw
@@ -1,6 +1,6 @@
 {{Macluumaad Qof Madax Ah
 | name = Barkhad Saalax<br> برخاد علي صلاح <small> </small> 
-| image =
+| image = Portrait_of_Barkhad_Ali_Salah.jpg
 | imagesize = 
 | birth_date = 
 | Ku dhashay = [[Boosaaso]], [[Soomaaliya]]
