--- a/Tabriz.mw
+++ b/Tabriz.mw
@@ -1,1 +1,2 @@
+[[File:Landscape of Tabriz 02.jpg|alt=Tabriz|thumb|Tabriz]]
 Tabriz waa gobal ka tirsan wadanka Iran waxuu xuduud la leeyahay wadanka Turki dadka ku nool waxaa lagu qiyaasaa ilaayo hal malyan iyo xoogaa
