--- a/Doqonnimo.mw
+++ b/Doqonnimo.mw
@@ -1,3 +1,5 @@
+[[File:Quentin Massys 030.jpg|thumb]]
+
 '''Doqonnimo''', '''Dabbaalnimo''' ({{lang-ar|غباء}}, {{lang-en|Stupidity}}) waa maangaabnimo iyo caqli yari xaga maskaxda ah, taasoo ay ka dhalato inay yaraadaan: Garashada, Dareenka,  Baaraan dega arimaha, iyo aqoon yari,. waxaa suuro gal ah inay ku timaado dhaxal, ama ka kasbasho,
 == waxaa kaloo loo yaqaan ==
 * Carannimo 
