*Empty MediaWiki Message*

--- a/Ruushka.mw
+++ b/Ruushka.mw
@@ -23,6 +23,7 @@
 |area                          = 17,075,400 km2
 |areami²                       = 6,592,800 
 |biyo                          = 13
+|GDP                           = 1.650, Trillion Dollar
 |population_estimate           = 144,192,450 
 |population_estimate_year      = [[2016]]
 |lacagta                       = [[Ruble]] (RUB)
