*Empty MediaWiki Message*

--- a/Yalho.mw
+++ b/Yalho.mw
@@ -5,8 +5,8 @@
 | nickname               = 
 | settlement_type        = [[Magaalo]]
 | motto                  = 
-| image_skyline          = [[File:Yalho valley.jpg|thumb|Togga yalho]]
-| imagesize              = 
+| image_skyline          = [[File:Yalho valley.jpg|thumb|500px|Togga yalho]]
+| imagesize              = 500px
 | image_caption          = 
 | image_flag             = 
 | flag_size              = 
