*Empty MediaWiki Message*

--- a/Smartphone.mw
+++ b/Smartphone.mw
@@ -5,6 +5,13 @@ smartphone waa magac law guyero gar kamida [[Mobile|tilifonada]] cusub oo ku sha
 
 inta uu badan nah tilifonadan waxay kushaqeyan [[:en:Touchscreen|dhalo tabasho]],sharikadaha tilifonada sameya'na xal lagamagarin smartphon's ka tilifonada lo bixinayo, waxa kamid'ah kuwo umaleya smartphone tilifonada [[internet]] iyo [[Email]]'ada dirikara ona furkiara malaf'yada office ona leh [[:en:Computer_keyboard|keybord]] dhamaystiran  QWERTY, bes tilmanshada ugufican oo ugu yelitan badan wa tilifonada kushaqeya sistamyadan : [[:en:IOS|ios]] ,[[android]] ,[[:en:BlackBerry_10|blackberry 10]],
 
+*Apple
+*Techno
+*Nokia
+*Motorola
+*Sony 
+ 
+
 ===Sharikadaha ugu waweyn tilifon samayska ===
 {| class="wikitable"
 !apple
