*Empty MediaWiki Message*

--- a/Koonfurta_China_Muranka_Badda.mw
+++ b/Koonfurta_China_Muranka_Badda.mw
@@ -3,7 +3,7 @@
 
 
 
-[[File:South China Sea claims map.jpg|thumb|600px|Territorial claims in the South China Sea]]
+[[File:South China Sea claims map.jpg|thumb|600px|Baddka Koonfur china /shinaha]]
 
 
 
