--- a/Iskushuban.mw
+++ b/Iskushuban.mw
@@ -1,7 +1,5 @@
 == Qoraalka madaxa hore ==
 '''Iskushuban''' waa [[degmo]] ku taalo [[Gobolka Bari]] ee woqooyi-bari [[Soomaaliya]].
 
-Degmadaan waxaa degan dad ka badan 15000. qof. Waa Magaalo Taariikhiya , waxay leedahay dhul-beereed aad cajiib u ah iyo biyo dabiici ah oo alle ku manaystay Waxaa Ku Badan dhirta loo yaqaan timirta , wa meel ku haboon dalxiiska oo ad uqurux badan.
-
-{{Degmooyinka Gobolka Bari}}
+Degmadaan waxaa degan dad ka badan 15000. qof. Waa Magaalo Taariikhiya , waxay leedahay dhul-beereed aad cajiib u ah iyo biyo dabiici ah oo alle ku manaystay Waxaa Ku Badan dhirta loo yaqaan timirta , wa meel ku haboon dalxiiska oo ad uqurux badan.sidoo kale degmadani waaa meel ku fiican dalxiiska{{Degmooyinka Gobolka Bari}}
 [[Category:Biyoshub Soomaaliya]]
