Undid edits by [[Special:Contribs/197.220.84.72|197.220.84.72]] ([[User talk:197.220.84.72|talk]]) to last version by AbshirBot

--- a/Nabiyada_Islaamka.mw
+++ b/Nabiyada_Islaamka.mw
@@ -1,5 +1,4 @@
-'''Nabiyada islaamka''' waa nabiyo badan oo lagu sheegay quraanka.Dadka muslimiinta waxay aaminsanyihiin in ilaahay oo [[Nabi|nabiyada]] u soo diray dadka banii'aadanka si ay jidka toosan u qaadtaan.Quraanka waxaa ku qoran Nabi muxammad (CSW) iyo nabiyada kale in ay faafiyaan hadalada [[Allaah|Ilaahay]].Nabiyada ku qoran quraanka badankood waxaa laga heli karaa diimaha kale.Quraanka waxaa ku qoran 25 nabi [[Xadiith]]kana waxuu sheegaa kuwo kale.hdhdhdh
-
+'''Nabiyada islaamka''' waa nabiyo badan oo lagu sheegay quraanka.Dadka muslimiinta waxay aaminsanyihiin in ilaahay oo [[Nabi|nabiyada]] u soo diray dadka banii'aadanka si ay jidka toosan u qaadtaan.Quraanka waxaa ku qoran Nabi muxammad (CSW) iyo nabiyada kale in ay faafiyaan hadalada [[Allaah|Ilaahay]].Nabiyada ku qoran quraanka badankood waxaa laga heli karaa diimaha kale.Quraanka waxaa ku qoran 25 nabi [[Xadiith]]kana waxuu sheegaa kuwo kale.
 == 25ta nabi oo quraanka ku jirto waa ==
 * [[Muxamed|Nabi Muxammad S.C.W.]]
 * [[Nabi Ibraahiim C.S.]]
