--- a/Duduble.mw
+++ b/Duduble.mw
@@ -4,7 +4,7 @@ Dudble waxeey qayb wayne ka qateen al
 Shabaab una gumaaday reer shabeelada hoose, rag badan oo al shabaab hada amiiro oo dilaa ah ayaa kujira, 
 Ceelgars, Ceelbuur, Xiindheere, Garabla', Xagareey, Ceelqooxle, Dadle, Baalal Dheer, Balanbal,jiraqaale, Yacyac, xiingaduud, Caraxun, Maraayo,Cimadle, God dhurwaa, Ceel lahelay, Wamoleey, Oodweyn, Dooxo Duduble iyo deegaano kale oo badan oo aan qoraalkaan lagusoo koobi karin ayaa ka mid ah magaalooyinka iyo tuulooyinka uu degaanka u ah Duduble.
 
-Beesha Duduble ayaa ah beesha ugu deeganka weeyn marka la barbar dhigo deegaanada aay degaan qabaa'ilada kale ee dega gobolka Galgaduud . == Sida uu ukala baxo Duduble wuxuu ka kooban yahay Sideed lafood oo waaweyn oo kala ah sida hoos ku qoran: 1.AWRADEEN 2.MAQLISAME 3.MAXAMAD CAMAL 4.AARSADE 5.CELI 6.Bisin 7.Daa'uud. 8 Qadhoob. Duduble wuxuu leeyahay hogaan dhaqameed caan ka ahaa dhulka mudug xiligii talyaaniga oo la `oran jiray ugaas foodeey.sidoo kale waxaa jiray Cabdi Cawaale oo loo aqoon jiray Cabdi Faracade iyo wiilkiisii Faarax Cabdi, Siyaasisiinta beesha waxaa ugu horeeya 1.Xildibaane Sidde 2.xaawa cawaale abtidoon 3.xaaji xaashi faarax 4.maxamad axmad xabad 5. por ciis maxamad siyaad 6. maxamad xaashi dhuxulow 7.Xuseen Maxamed Dhicis 8.Cali Wardheere Cabdi 9.Shaykh Ibrahim Cali Xashi Cabdulle (Xuub Caaro) 10.D.Maxamuud Maxamed Maxamuud 11.Axmed Maxamuud Nuur (dalqo) 12.Eng Yousuf Nuur Xaayow 13.Eng abdisalan macalin 14.proff Ahmed Abdulkadir wardhere  xersi(aqoon yahan da'yar) Eng Abdiaziz Ali Nur(eng Xidig) == Beesha Duduble waxaa lagu naaneeysaa XORDEGE oo waxaa la sheegaa in Duduble yahay beesha kaliya ee Soomaaliyeed ee aan arag gumeeysi sababta oo ah Behaa  Duduble okabiya diiday gumestihu inú sogalo dhulkeda waliba dagal isla galeen  sidas baa ka hakisay gumeestihii in u gaaro waxayna ku heleen naaaneysta ah DUDUBLE XORDEGE Beeshu magacyo badan ayey leedahay Sida Duduble, Xordege iyo Maxamud Hiraab Taas oo ka dhigan in beeshu ay si toos ah ugu abtirsato Hiraab Hawiye Waxaa kaloo loogu yeeraa yaraanka Hawiye.
+Beesha Duduble ayaa ah beesha ugu deeganka weeyn marka la barbar dhigo deegaanada aay degaan qabaa'ilada kale ee dega gobolka Galgaduud . == Sida uu ukala baxo Duduble wuxuu ka kooban yahay Sideed lafood oo waaweyn oo kala ah sida hoos ku qoran: 1.AWRADEEN 2.MAQLISAME 3.MAXAMAD CAMAL 4.AARSADE 5.CELI 6.DAA'UUD 7.Bisin 8 Qadhoob. Duduble wuxuu leeyahay hogaan dhaqameed caan ka ahaa dhulka mudug xiligii talyaaniga oo la `oran jiray ugaas foodeey.sidoo kale waxaa jiray Cabdi Cawaale oo loo aqoon jiray Cabdi Faracade iyo wiilkiisii Faarax Cabdi, Siyaasisiinta beesha waxaa ugu horeeya 1.Xildibaane Sidde 2.xaawa cawaale abtidoon 3.xaaji xaashi faarax 4.maxamad axmad xabad 5. por ciis maxamad siyaad 6. maxamad xaashi dhuxulow 7.Xuseen Maxamed Dhicis 8.Cali Wardheere Cabdi 9.Shaykh Ibrahim Cali Xashi Cabdulle (Xuub Caaro) 10.D.Maxamuud Maxamed Maxamuud 11.Axmed Maxamuud Nuur (dalqo) 12.Eng Yousuf Nuur Xaayow 13.Eng abdisalan macalin 14.proff Ahmed Abdulkadir wardhere  xersi(aqoon yahan da'yar) Eng Abdiaziz Ali Nur(eng Xidig) == Beesha Duduble waxaa lagu naaneeysaa XORDEGE oo waxaa la sheegaa in Duduble yahay beesha kaliya ee Soomaaliyeed ee aan arag gumeeysi sababta oo ah Behaa  Duduble okabiya diiday gumestihu inú sogalo dhulkeda waliba dagal isla galeen  sidas baa ka hakisay gumeestihii in u gaaro waxayna ku heleen naaaneysta ah DUDUBLE XORDEGE Beeshu magacyo badan ayey leedahay Sida Duduble, Xordege iyo Maxamud Hiraab Taas oo ka dhigan in beeshu ay si toos ah ugu abtirsato Hiraab Hawiye Waxaa kaloo loogu yeeraa yaraanka Hawiye.
 
 sodo kale Beshu Waxa laku tariya belaha uku badan dalka somalia waxana laku qiyaasa besha 800 oo Kun iyo inkabadan Duduble   hooyadiis Waa  Ujuuraan marke dhashay aye umul raacatay, Dadka  caanka ah oo ka dhashay Beelweynta Maxamuud Hiraab waxaan ka xusi karnaa Siyaad Kooradadab /ama Siyaad dheryo dhoob oo isaga lagu xasuusto "Hashu maankeyga gaddaye ma masaarbey laqday". Waxaan kaloo xusi karnaa gabadhii ugu horaysay oo xildhibaan noqota Xaawa cawaale abtidoon, geesigii weynaa ee Maxamed Cabdulle Xalane oo loo yaqaan (XALANE), Maxamuud Cali Axmed Xeyle (Elman), Ciise Axmedyare Abtidoon Dhiil "CIISE MA QADEEYE" maamulihi bankiga dhexe ee somaliyeed dowladi mohamed siyaad .maxamuud abdi (xoor) axmed nuur cali jimcaale oo ahaay fekerihii iyo madaxii Bangigii isgaarsiinta ee Al Barakaat hadana loo yaqaan Hormuud iyo Evc plus
 Iyo bankiga Salaam bank. garaad nuure taliyihii booliska caasimada mugdisho c/laahi tohob hayle (Eng Yousuf Nuur Xaayow)(Cabdulle Maxamuud Nuur )(Qaraabe)iyo Eng maxamud xashi xalane madaxii warashadii shamiitada ee barbera iyo Rag Kale oo Caan ahaa duduble le waxa uu degaan uleeyahay dhul baxad weyn oo lagu macaabo dooxa duduble oo kakooban degmooyin iyo tuulooyin sida ceelbuur oo ah xudunta duduble degmada ceel garas degmada xiin dheere iyo tuulooyin eey kamitahay ceelqooxle ceeklahelay warmoley habaas weyn iyo degmada garabla iyo dhulbalaaran oo ah ilaa 900 oo km oo isku weer ah.
