--- a/Doqonnimo.mw
+++ b/Doqonnimo.mw
@@ -10,4 +10,5 @@
 ==Horjeeda==
 *[[Caqli]]
 
+* [[IArchive:AdolfII.|Adolf Hitler. Viereinhalb Jahre des Kampfes gegen Lüge, Dummheit und Feigheit]]
 [[Category:Dhaqan]]
