--- a/Korona_fayras.mw
+++ b/Korona_fayras.mw
@@ -11,8 +11,6 @@ Nooc ka mid ah Fayraska karona ayaa laga helay magaalada [[Wuhan]] ee dalka [[sh
 Fayraskaan oo loogu magac daray (COVID-19) wuxuu gaaray dalal badan oo ka mid ah caalamka.
 
 ==Tixraac==
-{{reflist}}
-
-{{Template:Cudurada faafa}}
+{{reflist}}3. [https://www.coronaworldmap.xyz/ Corona World Map COVID-19 Real Statistics]{{Template:Cudurada faafa}}
 [[category:xanuun]]
 [[category:cudur]]
