Wuxuu dib u noqay badalkii oo sameeyay  [[Special:Contributions/365dni|365dni]] ([[User talk:365dni|talk]]) kuna celiyay badalkii ka  danbeeyay oo sameeyay  [[User:102.68.17.75|102.68.17.75]]

--- a/Korona_fayras.mw
+++ b/Korona_fayras.mw
@@ -11,6 +11,8 @@ Nooc ka mid ah Fayraska karona ayaa laga helay magaalada [[Wuhan]] ee dalka [[sh
 Fayraskaan oo loogu magac daray (COVID-19) wuxuu gaaray dalal badan oo ka mid ah caalamka.
 
 ==Tixraac==
-{{reflist}}3. [https://www.coronaworldmap.xyz/ Corona World Map COVID-19 Real Statistics]{{Template:Cudurada faafa}}
+{{reflist}}
+
+{{Template:Cudurada faafa}}
 [[category:xanuun]]
 [[category:cudur]]
