Degmada Buurdhuxunle Bakool Soomaaliyaa

--- a/Category:Tuulooyinka_Gobolka_Togdheer.mw
+++ b/Category:Tuulooyinka_Gobolka_Togdheer.mw
@@ -1,4 +1,17 @@
-Tuulooyinka Gobolka Togdheer
+Tuulooyinka hoosyimaada Degmada Buurdhuxunle Bakool Soomaaliyaa waxaa lamid ah
+
+# Boodaan 
+# Wardhujiiley
+# Aarshaamo
+# Toolidholing
+# Afgooye
+# Sedaxbuurood
+# Tawsiile
+# Aleemow
+# Garsaaley
+# Isdhoorte
+# Goobatao
+# Wargaduudo
 [[Category:Tuulooyinka Somaliland]]
 [[Category:Magaalooyinka Somaliland]]
 [[Category:Somaliland]]
