Degmada Buurdhuxunle Bakool Soomaaliyaa

--- a/Buurdhuxunle.mw
+++ b/Buurdhuxunle.mw
@@ -1,3 +1,1 @@
-{{merge to|Buurdhuxunle|{{subst:DATE}}}}
-
-Buurdhuxunle waa degmo kamid ah degmoyinka gobolka bakool Buurdhuxunle waxa la aas aasey sanadi 1957m waxayna dagmada Buurdhuxunle Ujirtaa magaala ndaxda  Huddur 90km degmada Buurdhuxunle  waxaana daga beesha hadame oo degta gobolada baay iyo bakool waana magaalo ganacsiyeed oo aad u mashquul badan Buurdhuxunle Bakool SOMALIA madhaayto somalia
+{{merge to|Degmada Buurdhuxunle Bakool Soomaaliyaa|<nowiki>{{ Degmada Buurdhuxunle Bakool Soomaaliyaa</nowiki>}}
