Degmooyinka gobolka Bakool Soomaaliyaa

--- a/Template:Degmooyinka_Gobolka_Bakool.mw
+++ b/Template:Degmooyinka_Gobolka_Bakool.mw
@@ -5,16 +5,12 @@
 |state= {{{state<includeonly>|collapsed</includeonly>}}}
 |liststyle = text-align:left
 |list1 = {{Div col|colwidth=27em}}
-* [[Xudur]]
-* [[Ceelbarde]]
-* [[Tiyeegloow]]
-* [[Waajid]]
-* [[Yeed]]
-* [[Buurdhuxunle]]
-* [[Ceel lahelay]]
-* [[Xudur]]
-* [[Baydhabo]]
-* [[Rabdhuure]]
+1. Xudur Magaala Madaxda 
+2. Waajid
+3. Buurdhuxunle
+4. Ceelberde
+5. Rabdhuure
+6. Tiyeeglow
 
 }}<includeonly>{{#switch: {{PAGENAME}} | Bakool = [[Category:Bakool|Gobolka Bakool]] | #default = [[Category:Bakool| ]] [[Category:Gobolada Soomaaliya]]}}</includeonly><!--
 --><noinclude>{{Documentation}}</noinclude>
