*Empty MediaWiki Message*

--- a/Qajaar.mw
+++ b/Qajaar.mw
@@ -24,7 +24,9 @@ dhulka ayaa lagu beeraa qoto dheer 12-18 mili mitir, ka dib kor buu u soo baxaa 
 [[File:PicklingCucumbers.jpg|right|thumb|250x250px|Pickling cucumbers]]
 
 == Jaadka miro ahaaneed ==
-waa miro u samaysan sidii dhululubadii labada gees ka soo qalloocan dhexdana tuur ku leh, caleemihiisa waxa la moodaa sadex gees, caleentiisa ayaa haraysa mirihiisa kana ilaalisa saamaynta cimilada, jiridiisu waa gaabantahay, wayna duf badantahay, dhirirka mirtiisa ayaa u dhexeeya 2.5-92 sm, dusha ku leh jiitinno qodan, leh qolof jilicsan oo cagaar ah sida caadiga , mar haday jaale noqoto dhadhankeedu waa qaraar, marmarna aashito ayuu noqdaa,[[File:Persiancucumber.jpg|right|thumb|276x276px|Qajaarka iiraan]]
+waa miro u samaysan sidii dhululubadii labada gees ka soo qalloocan dhexdana
+
+tuur ku leh, caleemihiisa waxa la moodaa sadex gees, caleentiisa ayaa haraysa mirihiisa kana ilaalisa saamaynta cimilada, jiridiisu waa gaabantahay, wayna duf badantahay, dhirirka mirtiisa ayaa u dhexeeya 2.5-92 sm, dusha ku leh jiitinno qodan, leh qolof jilicsan oo cagaar ah sida caadiga , mar haday jaale noqoto dhadhankeedu waa qaraar, marmarna aashito ayuu noqdaa,[[File:Persiancucumber.jpg|right|thumb|276x276px|Qajaarka iiraan]]
 
 == Waxtarkiisa caafimaad ==
 Qajaarka ayaa u roon caafimaadka bin aadanka isagoo wax ka tara xanuuno badan, meelaha uu u roonyahay waxaa ka mida: 
