--- a/Yaaqshiid.mw
+++ b/Yaaqshiid.mw
@@ -28,8 +28,8 @@
 | area_footnotes      = 
 | area_total_km2      = 67
 | population_footnotes = 
-| population_total    = 1m
-| population_as_of    = 2012
+| population_total    = 1.5m
+| population_as_of    = 2020
 | pop_density_footnotes = 
 | population_demonym  = Ree Yaaqshiid
 | elevation_footnotes = 
@@ -46,7 +46,7 @@
 '''Yaaqshiid''' waa [[degmo] katirsan gobolk [[Banaadir]] waxay ku taalaa waqooyi bari ee magaalada  [[Muqdisho]].waana dagmada koowaad ee ugu baaxada weyn gobalka banaadir 
 dagmadaan waxaa aas aasay nuur xiirey oo ah aabaha imran waxaana la aas aasay 1985
 
-Inkastoo ayna jirin tirakoob rasmi ah hadana dadka degan waxaa lagu qiyaasaa 97 kun oo qof.
+Inkastoo ayna jirin tirakoob rasmi ah hadana dadka degan waxaa lagu qiyaasaa 1m oo qof.
 
 == Xaafadaha, Laamaha iyo Waaxaha =
 * Carafaat
