--- a/Saraar.mw
+++ b/Saraar.mw
@@ -74,7 +74,7 @@ Degmada '''Caynabo''' ayaa ah magalada caasimada u ah Gobolka saraar waana magal
 
 ==Qabiil=
 
-Laamaha HJ ee Saraar ku dhaqan waxaa ka mid ah [[Reeryoonis]]; [[cali barre]]; [[reeriidle]]; [[cumarjibriil]]; [[Solomadow]]; [[HY sacad yoonis]]. Saraar dhinaceeda koonfur-bari waxaa ku dhaqan [[reer darawiish]], gaar ahaan hareeraha hareeraha Guumeys, gaar ahaan jilibada ka mid ah Jaamac Siyaad.
+Laamaha HJ ee Saraar ku dhaqan waxaa ka mid ah [[Reeryoonis]]; [[cali barre]]; [[reeriidle]]; [[cumarjibriil]]; [[Solomadow]]; [[HY sacad yoonis]]. Saraar dhinaceeda koonfur-bari waxaa ku dhaqan [[reer darawiish]], gaar ahaan hareeraha Guumeys, gaar ahaan jilibada ka mid ah Jaamac Siyaad.
 
 ==Tirada==
 Dadka ku nool waxa lagu qiyaasaa Gobolka Saraar ku dhawaad Boqol Kun. 50.000 waxa doorashada inay codeeyaan iska diiwaangaliyey 31-kun oo cod bixiye.wana gobolki ugu codka badna marka laga yimado 6da gobol ee waweyn. Waa gobol xoolo dhaqato, Beeralay, iyo Ganacsato.
