--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -80,7 +80,7 @@ Wuxuu yiri;
 
 '''Cali Gurey Iyo Boqor Cismaan'''
 
-Ugaas Cali Guray oo hogaaminjirey Beesha Dishiishe iyo qaar kamid ah Beelaha Majeerteen iyo Warsangeli iyo Boqor Cismaan oo hogaaminjirey inta badan Beesha Majeerteen waxaa ka dhex taagnaan jirey ismaandhaaf aad u weyn, iyadoo ay saa tahay ayaa qaar ka mid ah beelaha Majeerteen ee deganaa deegaanadii ay ka talin jirtay [[Saldanadii Cal Miskaad]] ee Cali Gurey madaxda ka ahaa u iisheen xaga Boqor Cismaan iyagoo markaa eegayey in marka xagga haybta ay noqoto uu Boqor Cismaan xigo.
+Saldanada Cal Miskaad ee uu hogaamin jiray Cali Gurey waxaa hoos imaan jiray Beesha Dishiishe iyo qaar kamid ah Beelaha Majeerteen iyo Warsangeli. Dhanka kale Boqor Cismaan oo hogaamin jirey inta badan Beesha Majeerteen iyo Cali Gurey waxaa ka dhex taagnaan jirey ismaandhaaf aad u weyn, iyadoo ay saa tahay ayaa qaar ka mid ah beelaha Majeerteen ee deganaa deegaanadii ay ka talin jirtay [[Saldanadii Cal Miskaad]] ee Cali Gurey madaxda ka ahaa u iisheen xaga Boqor Cismaan iyagoo markaa eegayey in marka xagga haybta ay noqoto uu Boqor Cismaan xigo.
 Muddo markii ay maqnaayeen ayeey Boqor Cismaan ka waayeen wixii ay ka naawilayeen kadib waxay go'aansadeen inay [[Bosaso]] dib ugu laabtaan Ugaas Cali Gurey ayaa loo sheegay dadki berigaas tegay inay dib usoo laabteen, Cali Gurey wuxuu amray in lasoo dhoweeyo [[Harti]]guna uusan dhul kala lahayn, wuxuuna tiriyey gabaygaan caanka ka noqday bulshada Soomaaliyeed dhexdeeda.
 
 *Qaaciidadaan tirin jiriyo helay qasiidkiiye
