--- a/Aqalka_Madaxtooyada_Soomaaliya.mw
+++ b/Aqalka_Madaxtooyada_Soomaaliya.mw
@@ -44,7 +44,13 @@ Maanta waxaa ku nool isla markaana ay u tahay xafiiska shaqo [[maxamed cabdullah
 * [https://www.youtube.com/watch?v=smFjcE2exm0 Video of Villa Somalia in 1991]
 ==Tixraac==
 {{reflist}}
-{{Maqaalo Soomaaliya}}
+{{Maqaalo Soomaaliya}}                 '''''wax ka ogow tariikhda bixiaankii talyaaniga'''''
+
+# inuu kabaxo dalka gumeestihii talyaaniga waxaa sabab u ahaa qoys layiraahdo biimaal kadib marki talyaaniga laga dile nin kadibna bixitaankooda ay shuruud uga dhigeen  
+# ilaa ninkii dile laga keeno nin reer baadiyo ah oo kasoo jeedo beesha biimaal aya wuxuu yiri aniga iigeya oo dhaha ninkii waakana ha idilaano hadeybo soomaaliya ay kabaxayan 
+# sidii ayaa loogu geeye talyaaniga ninkii rer miyig aha weyna toogteen talyaanigana wadankii wuu isaga bexe 
+
+#
 
 [[Category:Dhismayaasha Soomaaliya]]
 [[Category:Xarumaha madaxda]]
