*Empty MediaWiki Message*

--- a/Wadada_Rd_Number_1_Somaliland.mw
+++ b/Wadada_Rd_Number_1_Somaliland.mw
@@ -2,7 +2,7 @@
 
 '''Wadada Rd Number 1 [[Somaliland]]'''
 
-
+{{Flag|Somaliland}}
 
 
 Wadada dhexe ee hargeisa jamhuuriyada somaliland oo leh adeegyo wax-is-dhaafsi iyo adeegyo lacag-beddel
