*Empty MediaWiki Message*

--- a/Dadka-Dayak_Indunisiya.mw
+++ b/Dadka-Dayak_Indunisiya.mw
@@ -1,4 +1,4 @@
-[[File:Young Ibans, or Sea Dayaks.jpg|650px| Dadka dayak ]]
+[[File:Young Ibans, or Sea Dayaks.jpg|Right|thumb|650px| Dadka dayak ]]
 
 Dadka-Dayak Indunisiya
 
