*Empty MediaWiki Message*

--- a/Meheri.mw
+++ b/Meheri.mw
@@ -14,7 +14,7 @@
 |related-c = [[Daarood]], [[Harti]], [[Majeerteen]], [[Warsangali]], [[Dhulbahante]], [[Dishiishe]], [[Warsangeli]], [[Leelkase]], [[Dir]], [[Hawiye]], [[Isaaq]],], other [[Somali]]<!-- CONFIRMED RELATIONS!!! -->
 }}{{Main|Somali people}}
 
-'''Beesha Meheri''' (Carab Saalax) Waa beel ama qabiil soomaaliyeed, Beeshu waxay taarikh dheer ku leeyihiin ladagalamkii gumeystihi taliyaniga,ingriska ee dalka haystay. Waa beel lagu yaqano nabada, dariswanaga iyo xiriir wanagsan ee kala dhaxeyo beelaha kale ee somaliyeed. Marka laga hadlayo dhaqashada xoolaha beesha waxay caan ku yihiin dhaqashada Geela, Ariga,lo'da iyo Fardaha. Meheri Ismaaciil Waxay degaan Maamulada Puntland, Galmudug, Jubaland, Koonfur Galbeed, Somaliland  Hirshabeele iyo Caasimada Soomaliya ee Muqdisho. Beeshu boqolaal sano kahor waxay ganacsi isugu socon jireen soomaaliya iyo wadamada carabta oo dhan. Waana dad ganacsato ahaan jiray ahna ilaa iyo hada, waa dad kii isku xiray soomaaliya iyo wadamada carabta iyo wadamada bariga iyo bartamaha afrika. Beesha waxaa lagu tilmaamaa qabiil Diinta raacda, daris wanaagsan, nabadana jecel, had iyo jeerna daryeela dadka la dagan. 
+'''Beesha Meheri''' (Carab Saalax) Waa beel ama qabiil soomaaliyeed, Beeshu waxay taarikh dheer ku leeyihiin ladagalamkii gumeystihi taliyaniga,ingriska ee dalka haystay. Waa beel lagu yaqano nabada, dariswanaga iyo xiriir wanagsan ee kala dhaxeyo beelaha kale ee somaliyeed. Marka laga hadlayo dhaqashada xoolaha beesha waxay caan ku yihiin dhaqashada Geela, Ariga,lo'da iyo Fardaha. Meheri Ismaaciil Waxay degaan Maamulada Puntland, Galmudug, Jubaland, Koonfur Galbeed,   Hirshabeele iyo Caasimada Soomaliya ee Muqdisho.waxay oo kalay daagan Somaliland. Beeshu boqolaal sano kahor waxay ganacsi isugu socon jireen soomaaliya iyo wadamada carabta oo dhan. Waana dad ganacsato ahaan jiray ahna ilaa iyo hada, waa dad kii isku xiray soomaaliya iyo wadamada carabta iyo wadamada bariga iyo bartamaha afrika. Beesha waxaa lagu tilmaamaa qabiil Diinta raacda, daris wanaagsan, nabadana jecel, had iyo jeerna daryeela dadka la dagan. 
 
 
 Beesha Meheri  waxaa ka dhashay dad faro badan oo soomali magac ku lahaa sida Sarakiil, Aqoonyahano, Culmaa'udiin , Ganaacsato, Abwaano, xubno ka mida ahaa SYL iyo dad faro badan oo gayiga Soomaliyeed caan ka ahaa caan Ka ahaaa. Meheri Ismaaciil waa beel balaran qaybaha hoose ee ay u kala baxdo waxaa ka mida (sub-clans):  
