*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -1,4 +1,4 @@
-(Begedi Clansman)
+[[File:Bagedi.jpg | thumb | 220x124px | right | Begedi Clansmens]]
 
 Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab)  kamid ah beelwaynta Raxaweyn Aw Digil  , Begedi wuxuu uqaybsamaa :
 
