*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -15,6 +15,7 @@ Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab)  kamid ah beelwaynta
 
 Waa dad xoolo dhaqato  iyo beeraley ah . Waxay degaan [[Afooye]] , [[Awdheegle]], [[Mubarak]] , [[bariire]] , [[Cumur beere (tuulo)|Cumar beere]] , [[Daaru Salaam (tuulo)|Daaru salaam]], [[Buulo mareer]] , [[Qoryooleey]] , Baraawe, [[Waabari]] iyo [[Marko]]. 
 
+[[File:Awdheegle, Shabeelada hoose.jpg | thumb | 220x124px | right | Awdheegle ]]
 
 Sido kale waxay degaan koonfurta [[Yemen]] sida [[Xadramoot]]. 
 {{ }}
