--- a/Astaan.mw
+++ b/Astaan.mw
@@ -4,3 +4,5 @@
 * [[Astaan (halkudheg)]], halkudheg ama weedh muujinaysa ujeedo ama ka jeedo ([[Af-Ingiriis|Ingiriis]]: Slogan).
 * [[Astaan dal]], astaan loo qoray si rasmi ah una gaar ah dawlad ([[Af-Ingiriis|Ingiriis]]: Motto).
 * [[Astaan qaran|Astaan qaran]], Astaan sawir rasmi ah una gaar ah dawladda ([[Af-Ingiriis|Ingiriis]]: Coat of arms).
+
+[[Category:Astaannta]]
