*Empty MediaWiki Message*

--- a/Astaan.mw
+++ b/Astaan.mw
@@ -5,4 +5,4 @@
 * [[Astaan dal]], astaan loo qoray si rasmi ah una gaar ah dawlad ([[Af-Ingiriis|Ingiriis]]: Motto).
 * [[Astaan qaran|Astaan qaran]], Astaan sawir rasmi ah una gaar ah dawladda ([[Af-Ingiriis|Ingiriis]]: Coat of arms).
 
-[[Category:Astaannta]]
+[[Category:Astaannta| ]]
