--- a/Astaan.mw
+++ b/Astaan.mw
@@ -1,4 +1,5 @@
 {{Faahfaahin|Astaannta Qaranka ee Soomaaliya|Astaanta Calanka Soomaaliya}}
+{{commons|Category:Symbols}}
 '''Astaan''' waxay noqon kartaa:
 * [[Astaan (Sumad)]], sawir ama unug xambaarsan tusaale muuqa ([[Ingriis|Ingiriis]]: Logo).
 * [[Astaan (halkudheg)]], halkudheg ama weedh muujinaysa ujeedo ama ka jeedo ([[Af-Ingiriis|Ingiriis]]: Slogan).
