--- a/Calanka_Khaatumo.mw
+++ b/Calanka_Khaatumo.mw
@@ -1,7 +1,7 @@
 {{Caddayn u baahan}}
 [[File:Darawiish (khatumo) flag.png|right|thumb|calankii khaatumo]]
 '''Calanka khaatumo''' waxa markii uguhoraysay la isticmaalay calanka [[Khaatumo]] ee xilaga sanadka 2012kii. Waxa uu calanka [[Khaatumo]] ka koobanyahay 
-midabka [[baluug]], iyo [[saddexagal]] cad ah dinaca [[bidix]], iyo xidig cad, iyo faraska caanka ee [[Xiin Faniin]], ee summad naasley dhanka [[Daraawiish]] ah, iyo nin [[Darawiishi]] ah. Calanka Khaatumo wuxuu astaan u yahay beelaha [[reer Daraawiish]].
+midabka [[baluug]], iyo [[saddexagal]] cad ah dinaca [[bidix]], iyo xidig cad, iyo faraska caanka ee [[Xiin Faniin]], ee summad naasley dhanka [[Daraawiish]] ah, iyo nin [[Darawiishi]] ah. Calanka Khaatumo wuxuu [[astaan]] u yahay beelaha [[reer Daraawiish]].
 
 [[Category:Calamada]]
 [[Category:Soomaaliya]]
