retour à une version sans vandalisme 2016-10

--- a/Calanka_Soomaaliya.mw
+++ b/Calanka_Soomaaliya.mw
@@ -1,17 +1,10 @@
-Waa calanka calamada aduunka ugu qurruxda badan. Lkn calan kasta dadkiisaa duleeya ama kor uqaada calanka somaliya waxa lagu suubiiyay magalada baandiiradley ee gobolka mudug
+[[File:Flag of Somalia.svg|thumb|right|Calanka Soomaaliya]]
+'''Calanka Jamhuuriyadda Federaalka Soomaaliya''' waxaa la alifay 12 [[Oktoobar]] [[1954]]tii. [[Soomaaliya|Jamhuuriyadda Soomaaliya]] astaanta calanka [[Qolaba Calankeedu waa ceeyn]]. Waxaa markii ugu horeeysay laga taagay Magaaladda Hargeeysa caasimadda labaad eed Dalka Soomaaliya.
+Waxaa alifay Allaha unaxariistee Maxamad Cawaalle Liibaan oo xubin ka ahaa xisbigii xurnimo doonka ee [[SYL]].
+Dhalintii SYL ayaa kaalin lixaad leh ka geeystay sidii eey calan eey Soomaali leedahay uga taagi lahaayeen gayiga Soomaaliyeed.
+Calanka Soomaaliya waxa uu ka kooban yahay labo midab oo kala ah buluug iyo iyo xiddig caddaan ah oo dhexda kaga taallo.
+Xiddigtani shanta gees leh ayaa waxeey ka hadleeysaa shanta Soomaali oo uu gumeeystuhu kala qoqobay waxaa eeyna caddeeyneeysaa in aanay Soomaali katanaasulin midnimadeeda iyo wada jirkooda ooyna wali niyadda ku hayaan sidii mar leeysugu soo celin lahaa shanta Soomaali [[Soomaaliweeyn]].
+Calanka ayaa ah mid kadhax muuqda dhamaan calamada adduunka.
 
-== Sidoo kale fiiri ==
-HEESTA CALANKA:
-
-QOLOBO CALANKEENU WAA CEYNOO..
-
-ANAGANA KEENU WAA CIRKOO KALE E ..
-
-OO AAN CAAD LAHEEHEN CAASHAQA..
-
-[[Astaanta Calanka Soomaaliya]] waxa calanka manta somalia haysato u dagalamay halyay yo  somali ah oo ay halyay yo badan oo somali uga dhinteen ilahay Naxariistii Janno Haka Waraabiyee
 [[Category:Calamada]]
-[[Category:Soomaaliya]] 
-  <big>'''Q''<u>oraa sare Maajid Xasan Xareed</u>'''''</big> 
-
-               +252617385865
+[[Category:Soomaaliya]]
