--- a/Astaanta_Qaranka_Somaliland.mw
+++ b/Astaanta_Qaranka_Somaliland.mw
@@ -34,7 +34,7 @@ oo muujinaysa In shacabka Somaliland ay  Yihiin dad Islaam ah.
 
 5) Laba Gacmod oo is-salaamaaya oo u taagan iskaashiga iyo Wax wada-Qabsiga.
 
-6) Laba Caleemood oo gunta hoose kasoo bilaabmaya oo ku gadaaman dhamaan Qaybaha kale ee Astaanta Waxaanay utaagan yihiin Nabaatka iyo Barwaaqada Deegaanka.
+6) Laba Caleemood oo gunta hoose kasoo bilaabmaya oo ku gadaaman dhamaan Qaybaha kale ee [[Astaan]]ta Waxaanay utaagan yihiin Nabaatka iyo Barwaaqada Deegaanka.
 
 ==Noocyadii Kala Duwaanaa ee La Soo Isticmaalay==
 <gallery>
