Removing [[:c:File:Biyo_kulule_image.jpg|Biyo_kulule_image.jpg]], it has been deleted from Commons by [[:c:User:JuTa|JuTa]] because: No OTRS permission for 30 days.

--- a/Biyo_kulule.mw
+++ b/Biyo_kulule.mw
@@ -1,6 +1,6 @@
 {{Infobox port
 | name = Biyo kulule
-| image =[[File:Biyo kulule image.jpg|thumb|Sawir Biyo kulule]]
+| image =
 
 | imagesize = 250
 
