/* Degmooyinka gobolka Sool */

--- a/Sool.mw
+++ b/Sool.mw
@@ -77,8 +77,10 @@ waxaa ka mid ah prosoorka xifradihiisa sida in uu somgas ka sameeyay digada Lu'a
 * [[Laascaanood]] waa caasimada Sool 
 * [[Caynaba]] waxay dhanka waqooyi kagtaa laascaanood
 * [[Taleex]] waa magaladii ugu horaysay ee diyarad lagu garaaco afrika waana xaruntii halgankii geyiga afrika ugu dheera ee soomaliyeed ee daraawishta.
-* [[Oog]]. Waa magalada 3aad ee ugu weyn gobolka narka laga yimado lascaano iyo caynaba waxay waqooyi ka xigtaa Laascaanood
-* [[War Idaad]]
+* [[Boocame]]. Waa magalada 3aad ee ugu weyn gobolka narka laga yimado lascaano iyo Fardhidin waxay koonfur ka xigtaa Qawlo
+* [[lafweyn]]
+*godaalo
+*yagoori
 
 Waa degmada kala badha gobolada waqooyi waxayna ku taala galbeedka gobolka sool
 {{Gobolada Somaliland}}
