--- a/Garaad_Jaamac_Garaad_Cali.mw
+++ b/Garaad_Jaamac_Garaad_Cali.mw
@@ -5,12 +5,12 @@
 |birth_date  = 
 |birth_place = [[Laascaanood]], [[Soomaliya]]
 |occupation  = Madax dhaqameed
-|known_for   = Garaadka guud ee [[Dhulbahante]]
+|known_for   = Garaadka guud ee [[reer darawiish]]
 |networth    =
 |spouse      =
 |children    =
 }}
-'''Garaad Jaamac Garaad Cali''' waa  waa madax dhaqameed ahna garaadka guud ee qabiilka [[Dhulbahante]]. waxaa dhalay garaadkii ka horreyey Garaad Cabdiqani, waxaa loogu caleemo saaray Magaalada [[Laascaanood]] taariikhda marka ee eheed 22 may 2006<ref>http://www.biyokulule.com/garaad%20jaamac.htm</ref>, Munaasabadda caleemo saarkiisa waxaa ka soo qayb galay dad aad u fara badan oo ay ku jiraan siyaasiyiin sarsare oo ka soo jeeda Dowladda Kumeel gaarka ah ee Soomaaliya, Somaliland iyo Puntland.
+'''Garaad Jaamac Garaad Cali''' waa  waa madax dhaqameed ahna garaadka guud ee qabiilka [[reer darawiish]]. waxaa dhalay garaadkii ka horreyey Garaad Cabdiqani, waxaa loogu caleemo saaray Magaalada [[Laascaanood]] taariikhda marka ee eheed 22 may 2006<ref>http://www.biyokulule.com/garaad%20jaamac.htm</ref>, Munaasabadda caleemo saarkiisa waxaa ka soo qayb galay dad aad u fara badan oo ay ku jiraan siyaasiyiin sarsare oo ka soo jeeda Dowladda Kumeel gaarka ah ee Soomaaliya, Somaliland iyo Puntland.
 
 
 ==Taariikh nololeed==
