*Empty MediaWiki Message*

--- a/Garaad_Jaamac_Garaad_Cali.mw
+++ b/Garaad_Jaamac_Garaad_Cali.mw
@@ -3,7 +3,7 @@
 |image       =
 |citizenship = Soomaali 
 |birth_date  = 
-|birth_place = [[Laascaanood]], [[Soomaliya]]
+|birth_place = [[Sahdheer]], [[Soomaliya]]
 |occupation  = Madax dhaqameed
 |known_for   = Garaadka guud ee [[reer darawiish]]
 |networth    =
