*Empty MediaWiki Message*

--- a/Dagaalkii_Afgaanistaan_​​(2001-taako).mw
+++ b/Dagaalkii_Afgaanistaan_​​(2001-taako).mw
@@ -2,13 +2,16 @@ Dagaalkii Afgaanistaan
 
 
 Nato
-{{Flag|United States}}{{Flag|Turkey}}
-{{Flag|United Kingdom}}{{Flag|France}}
 
-
-iyo
+* {{Flag|United States}}
+* {{Flag|Turkey}}
+* {{Flag|United Kingdom}}
+* {{Flag|France}}
 
 [[w:es:Guerra de Afganistán (2001-2014)]]
+
+iyo-
+
 
 
  Taliban{{Flag|Afghanistan}}               
