*Empty MediaWiki Message*

--- a/Cali_Garaad.mw
+++ b/Cali_Garaad.mw
@@ -1,7 +1,7 @@
 {{Caddayn u baahan}}
 {{wargelin|Qoraalka bogan waa mid la [[tirtir]]i rabo.}}
 
-'''Cali garaad''' waa beel ka mid ah beelwaynta Faarax Garaad ee [[Dhulbahante]] .
+'''Cali garaad''' waa beel ka mid ah beelwaynta Faarax Garaad ee [[reer darawiish]] .
 
 ==Taariikh==
 == sida ee beesha u kala baxdo ==
